로그인구현

--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,47 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	//Springboot Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	//Thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	//Lombok
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	//SpringSecurity
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//SpringSecurity + Thymeleaf
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+	//Dbconn basic
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	//ORM_MYBATIS
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+
+	//Jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	//OAUTH2-Client
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+	//Jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+	//Devtools
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	//Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
