--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,44 @@
+# ---------------------------------------------------
+# JPA
+# ---------------------------------------------------
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
+# ---------------------------------------------------
+#JPA FOREIGN KEY PERMIT
+# ---------------------------------------------------
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+
+# ---------------------------------------------------
+#JPA SQL INIT
+# ---------------------------------------------------
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+# ---------------------------------------------------
+#OAUTH2 CLIENT
+# ---------------------------------------------------
+#KAKAO
+spring.security.oauth2.client.registration.kakao.client-id=173c1c4a828628312b4c036e8f8c4543
+spring.security.oauth2.client.registration.kakao.client-secret=nXWTunFlMQ1ItuJEoSK11XgAygbNKUt2
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.scope=name,account_email,phone_number
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
+
+#KAKAO PROVIDER
+spring.security.oauth2.client.provider.kakao.authorization-uri = https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri = https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri = https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute = id
+
+#GOOGLE PROVIDER
+spring.security.oauth2.client.registration.google.client-id=15984624731-jkbmoj4m3h10mkei1c0pr37q2dn97pjt.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile, email
