--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,7 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute = id
 spring.security.oauth2.client.registration.google.client-id=15984624731-jkbmoj4m3h10mkei1c0pr37q2dn97pjt.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile, email
+
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+spring.thymeleaf.cache=false
