--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,17 @@ spring.security.oauth2.client.registration.google.scope=profile, email
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.thymeleaf.cache=false
+
+#Mail Settings
+spring.mail.default-encoding=UTF-8
+
+#Google SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gkatjdah070@gmail.com
+spring.mail.password=awyz qmde aazq wonl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.mime.charset=UTF-8
+spring.mail.properties.mail.transport.protocol=smtp
