--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 	//OAUTH2-Client
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+	//VALIDATOR
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	//Jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
