--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.security.oauth2.client.registration.kakao.client-secret=nXWTunFlMQ1ItuJEo
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.scope=name,account_email,phone_number
+spring.security.oauth2.client.registration.kakao.scope=name,account_email,phone_number,shipping_address
 spring.security.oauth2.client.registration.kakao.client-name=Kakao
 
 #KAKAO PROVIDER
