--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,7 @@ spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.mime.charset=UTF-8
 spring.mail.properties.mail.transport.protocol=smtp
+
+#Multipart File size
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
