비밀번호 찾기 sequence diagram 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,5 @@ spring.mail.properties.mail.transport.protocol=smtp
 #Multipart File size
 spring.servlet.multipart.maxFileSize=10MB
 spring.servlet.multipart.maxRequestSize=10MB
+
+spring.thymeleaf.cache=false
